# HomeWork_14.1

./: .flake8  .gitignore  14.1_main.py  14.2_main.py  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_products_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_products_py.html
idea/: my_main_14.2.py
src/: products.py
tests/: test_products.py
