[tool.poetry]
name = "serj"
version = "0.1.0"
description = "Homework"
authors = ["serj <sergejtustin601@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
extend-exclude = '''
^\.venv/
^\.env/
^\.git/
^\.mypy_cache/
^\.pytest_cache/
^__pycache__/
'''

[tool.isort]
line_length = 119
skip = [".venv", ".env", "venv"]
skip_glob = ["**/.venv/**", "**/.env/**"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "^\\.venv/.*",
    "^\\.env/.*",
    "^\\.mypy_cache/.*",
    "^__pycache__/.*",
]